--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.1",
+    "aos": "^2.3.4",
     "daisyui": "^2.50.2",
+    "framer-motion": "^10.12.16",
+    "luxy.js": "^0.1.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-dom": "^18.2.0",
@@ -17,9 +20,12 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
+    "react-spring": "^9.7.1",
     "react-toastify": "^9.1.1",
     "react-whatsapp-chat-widget": "^1.1.6",
     "scroll-carousel": "^1.2.1",
+    "swiper": "^9.3.2",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
