--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rtk-portfolio",
+  "name": "Rainer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,21 +9,29 @@
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^14.1.1",
     "aos": "^2.3.4",
+    "axios": "^1.6.3",
     "daisyui": "^2.50.2",
-    "framer-motion": "^10.12.16",
+    "framer-motion": "^10.13.0",
+    "gsap": "^3.12.2",
+    "locomotive-scroll": "^5.0.0-beta.8",
     "luxy.js": "^0.1.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^6.8.1",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "react-scroll-to-top": "^3.0.0",
+    "react-spinners": "^0.13.8",
     "react-spring": "^9.7.1",
     "react-toastify": "^9.1.1",
     "react-whatsapp-chat-widget": "^1.1.6",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.64.0",
     "scroll-carousel": "^1.2.1",
+    "styled-components": "^6.1.5",
     "swiper": "^9.3.2",
     "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.0"
